<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_head">My Nanodegree Apps!</string>

    <string name="txt_btn_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="txt_btn_scores_app">SCORES APP</string>
    <string name="txt_btn_libray_app">LIBRARY APP</string>
    <string name="txt_btn_build_it_bigger">BUILD IT BIGGER</string>
    <string name="txt_btn_xyz_reader">XYZ READER</string>
    <string name="txt_btn_capstone_my_own_app">CAPSTONE: MY OWN APP</string>
</resources>
