<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivityFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:background="#daeef1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:text="@string/app_head"
            android:id="@+id/txt_app_head"
            style="@style/style_app_head"
            android:onClick="showToast"/>

        <Button
            android:id="@+id/btn_spotify_streamer"
            android:text="@string/txt_btn_spotify_streamer"
            android:layout_below="@id/txt_app_head"
            style="@style/style_btn"
            android:onClick="showToast"/>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_scores_app"
            android:text="@string/txt_btn_scores_app"
            android:layout_below="@id/btn_spotify_streamer"
            style="@style/style_btn"
            android:onClick="showToast"/>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_libray_app"
            android:text="@string/txt_btn_libray_app"
            android:layout_below="@id/btn_scores_app"
            style="@style/style_btn"
            android:onClick="showToast"/>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_build_it_bigger"
            android:text="@string/txt_btn_build_it_bigger"
            android:layout_below="@id/btn_libray_app"
            style="@style/style_btn"
            android:onClick="showToast"/>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_xyz_reader"
            android:text="@string/txt_btn_xyz_reader"
            android:layout_below="@id/btn_build_it_bigger"
            style="@style/style_btn"
            android:onClick="showToast"/>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_capstone_my_own_app"
            android:text="@string/txt_btn_capstone_my_own_app"
            android:layout_below="@id/btn_xyz_reader"
            style="@style/style_btn.style_btn_capstone"
            android:onClick="showToast"/>

    </RelativeLayout>
</ScrollView>